# asrbench-cli

./: LICENSE  Makefile  README-pt.md  README-pypi.md  README.md  config_example.yml  pyproject.toml
asrbench_cli/: cli.py  commands.py  observer.py
asrbench_cli/transcribers/: configs.py  faster_whisper_.py  hf_provider.py  vosk_.py  wav2vec_.py  whisper_.py
resources/common_voice_05/txt/: common_voice_pt_38229259.txt  common_voice_pt_38492807.txt  common_voice_pt_38531925.txt  common_voice_pt_38553586.txt  common_voice_pt_39586909.txt
tests/: conftest.py  test_cli.py
