[tool.poetry]
name = "asrbench-cli"
version = "0.1.0-alpha"
description = ""
authors = ["BDu4rTe <brianschierduarte@outlook.com>"]
readme = "README.md"
packages = [{ include = "asrbench_cli" }]


[tool.poetry.scripts]
cli = "asrbench_cli.cli: app"

[tool.poetry.dependencies]
python = "^3.12"
faster-whisper = "^1.0.3"
vosk = "^0.3.45"
transformers = "^4.44.2"
librosa = "^0.10.2.post1"
openai-whisper = { git = "https://github.com/openai/whisper.git" }
asrbench = { git = "https://github.com/ASRBench/asrbench.git", branch = "duarte/dev"}
typer = {extras = ["all"], version = "^0.13.1"}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
